src/styles/_global.scss
// DEVELOPER NOTES: I know this kind of styling is shit, but it works anyway. will update soon
body.dark {
  .text--color-primary {
    color: $color-white;
  }

  .text--color-danger {
    color: $color-danger !important;
  }

  .modal,
  .toolbar,
  .widget,
  .categories,
  .category-widget,
  .dashboard,
  .date-range-modal,
  .form-input__input,
  .form-input__radio,
  .form-input__select-option-container,
  .form-input__select-option:not(.selected),
  .form-input__select-placeholder--has-value,
  .form-input__file-placeholder,
  .more-option-modal,
  .transactions,
  .transaction-detail-container,
  .transaction-detail-container__transaction-summary,
  .reports,
  .settings {
    background-color: $color-dark;
    color: $color-white;

    & button {
      color: $color-white;
    }
  }

  .modal {
    background-color: rgba($color-dark, 0.3);

    &__container {
      background-color: $color-dark;
      color: $color-white;
    }
  }

  .category-tab-view {
    &__add-button {
      border-color: $color-white;
    }
  }

  .transaction-detail-container__transaction-summary {
    border-top: 1px solid rgba($color-white, 0.1);
  }

  ::-webkit-calendar-picker-indicator {
    filter: invert(1);
  }
}

